# protTrace

./: INSTALL.txt  INSTALL_LINUX.txt  README.md  build_setup_test.sh  setup.cfg  setup.py
prottrace/databases/fdog_api/: api.py  hamstr_search.py
prottrace/databases/oma_api/: api.py
prottrace/setup/: create_conf.pl  setup.sh  setup_conda.sh  setup_prottrace.py  split_oma.sh
prottrace/species_distance/: distance.py  ml_matrix.py
prottrace/traceability/: calculate_traceability.py  colorize_tree.py  colourize_tree.py  evol_params.py  evolutionary_model.py  prottrace.py  r_nonlinear_leastsquare.R  self_hit_statistics.py  transform_alignment.py  tree_reconstruction.py
prottrace/utils/: configure.py  data_api.py  database_api.py  file.py  log.py
toy_example/: prog.config  test.fasta  test.id
used_files/: ML_table.txt  colourizable_species_tree.nw  paramsMaxLikelihoodMapping.txt  phytozomeMaxLikMatrix.v2.txt.oma.txt  phytozomeSpeciesList.txt  phytozomeSpeciesTree.nw  r_nonlinear_leastsquare.R  speciesTreeMapping.txt  species_mapping.txt  stepwise_evolution.nw
