[metadata]
name = ProtTrace
version = 1.9.0
author = Arpit Jain
maintainer = Dominik Perisa
maintainer_email = dominik.perisa.bio@gmail.com
description = Calculates the evolutionary traceability of a protein
url = https://github.com/BIONF/protTrace
license = GPL-3.0
classifiers =
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3

[options]
zip_safe = false
package_dir =
	= prottrace
packages = find:
python_requires =
	>= 3.7.1
[options.packages.find]
where = prottrace
[options.entry_points]
console_scripts =
	prottrace = traceability.prottrace:main
	distance = species_distance.distance:main
